--- a/Simple Example.ipynb
+++ b/Simple Example.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -252,21 +252,16 @@
     {
      "data": {
       "text/plain": [
-       "DiffCovShooting (generic function with 1 method)"
+       "DiffCovShooting (generic function with 2 methods)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function DiffCovShooting(hSx, hSy, lambda, Ups, options)    \n",
-    "    # process options    \n",
-    "    maxIter = 2000\n",
-    "    optTol = 1e-5\n",
-    "    \n",
-    "    #\n",
+    "function DiffCovShooting(hSx, hSy, lambda, Ups; maxIter=2000, optTol=1e-5)\n",
     "    p = size(hSx, 1)\n",
     "        \n",
     "    Delta = zeros(p, p)\n",
@@ -322,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -331,7 +326,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "elapsed time: 0.043884328 seconds (1318760 bytes allocated)\n"
+      "elapsed time: 0.048015386 seconds (1372604 bytes allocated)\n"
      ]
     },
     {
@@ -366,13 +361,13 @@
        "  0.0          0.0       0.0  0.0  0.0     0.0  0.0  0.0  0.0  0.0  0.0  0.0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "@time solShoot = DiffCovShooting(hSx, hSy, lambda, ones(p,p), 1)"
+    "@time solShoot = DiffCovShooting(hSx, hSy, lambda, ones(p,p))"
    ]
   },
   {
@@ -397,13 +392,172 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implementation of the active shooting algorithm"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "function updateDelta!(Delta, hSx, hSy, A, lambda; maxIter=2000, optTol=1e-5)    \n",
+    "    # Delta is a sparse matrix stored in CSC format    \n",
+    "    # only diagonal and lower triangular elements are used\n",
+    "    \n",
+    "    # extract fields from sparse matrix Delta \n",
+    "    colptr = Delta.colptr\n",
+    "    nzval = Delta.nzval\n",
+    "    rowval = Delta.rowval\n",
+    "    \n",
+    "    p = size(Delta, 1)\n",
+    "    \n",
+    "    iter = 1\n",
+    "    while iter <= maxIter\n",
+    "       if mod(iter, 10) == 0\n",
+    "            @show \"inner $iter\"\n",
+    "        end\n",
+    "        \n",
+    "        fDone = true\n",
+    "        for colInd=1:p\n",
+    "            for j=colptr[colInd]:colptr[colInd+1]-1\n",
+    "                rowInd = rowval[j]\n",
+    "                \n",
+    "                # a sanity check in \n",
+    "                if rowInd < colInd\n",
+    "                    continue\n",
+    "                end\n",
+    "                \n",
+    "                if rowInd==colInd\n",
+    "                    # diagonal elements\n",
+    "                    x0 = hSx[rowInd,rowInd]*hSy[rowInd,rowInd]/2\n",
+    "                    x1 = A[rowInd,rowInd] - hSy[rowInd,rowInd] + hSx[rowInd,rowInd]\n",
+    "                    tmp = SoftThreshold(-x1/x0/2 + nzval[j], lambda[rowInd,colInd] / 2 / x0)\n",
+    "                else\n",
+    "                    # off-diagonal elements\n",
+    "                    x0 = (hSx[rowInd,rowInd]*hSy[colInd,colInd] + hSx[colInd,colInd]*hSy[rowInd,rowInd])/2 \n",
+    "                              + hSx[rowInd,colInd]*hSy[rowInd,colInd]\n",
+    "                    x1 = A[rowInd,colInd] + A[colInd,rowInd] - 2*(hSy[rowInd,colInd] - hSx[rowInd,colInd])\n",
+    "                    tmp = SoftThreshold(-x1/x0/2 + nzval[j], lambda[rowInd,colInd] / x0)\n",
+    "                end\n",
+    "                \n",
+    "                # size of update\n",
+    "                h = tmp - nzval[j]\n",
+    "                # update is too big -- not done\n",
+    "                if abs(h) > optTol\n",
+    "                    fDone = false\n",
+    "                end                \n",
+    "                # update Delta\n",
+    "                nzval[j] = tmp   \n",
+    "                \n",
+    "                # update A -- only active set\n",
+    "                for ci=1:p\n",
+    "                    for k=colptr[ci]:colptr[ci+1]-1\n",
+    "                        ri = rowval[k]\n",
+    "                        \n",
+    "                        if rowInd == colInd                                     \n",
+    "                            A[ri,ci] = A[ri,ci] + h * hSx[ri,rowInd]*hSy[rowInd,ci]\n",
+    "                            if ri != ci\n",
+    "                                A[ci,ri] = A[ci,ri] + h * hSx[ci,rowInd]*hSy[rowInd,ri]\n",
+    "                            end\n",
+    "                        else\n",
+    "                            A[ri,ci] = A[ri,ci] + h * (hSx[ri,colInd]*hSy[rowInd,ci] + hSx[ri,rowInd]*hSy[colInd,ci])\n",
+    "                            if ri != ci\n",
+    "                                A[ci,ri] = A[ci,ri] + h * (hSx[ci,colInd]*hSy[rowInd,ri] + hSx[ci,rowInd]*hSy[colInd,ri])\n",
+    "                            end                            \n",
+    "                        end\n",
+    "                    end\n",
+    "                end   # end update A                \n",
+    "            end\n",
+    "        end            \n",
+    "        \n",
+    "        iter = iter + 1;\n",
+    "        if fDone\n",
+    "            break\n",
+    "        end\n",
+    "        \n",
+    "    end  # while\n",
+    "    \n",
+    "    Delta\n",
+    "end\n",
+    "\n",
+    "function findViolator!(active_set, Delta, hSx, hSy)   \n",
+    "    p = size(hSx, 1)\n",
+    "    \n",
+    "    val = 0\n",
+    "    ind = 0\n",
+    "    for ic=1:p\n",
+    "        for ir=ic:p\n",
+    "            cInd = (ic-1)*p + ir\n",
+    "            if findfirst(active_set, cInd) != 0\n",
+    "                continue\n",
+    "            end\n",
+    "            \n",
+    "        \n",
+    "            S0 = -Xy[j]\n",
+    "            for k = active_set\n",
+    "                S0 += XtX[j, k]*beta[k]\n",
+    "            end\n",
+    "            if abs(S0) > lambda\n",
+    "                if abs(S0) > val \n",
+    "                    val = abs(S0);\n",
+    "                    ind = j;\n",
+    "                end\n",
+    "            end\n",
+    "        end\n",
+    "    \n",
+    "end\n",
+    "\n",
+    "function DiffCovActiveShooting(hSx, hSy, lambda; maxIter=1000, maxInnerIter=1000, optTol=1e-5, Delta = [])\n",
+    "    p = size(hSx, 1)\n",
+    "        \n",
+    "    if isempty(Delta)\n",
+    "        Delta = sparse(p, p)\n",
+    "        A = zeros(p, p)\n",
+    "        \n",
+    "        active_set = []\n",
+    "        findViolator!(active_set, Delta, hSx, hSy)    \n",
+    "    else\n",
+    "        lDelta = tril(Delta, -1)\n",
+    "        dDelta = spdiagm(diag(Delta))\n",
+    "        A = hSx * (lDelta + lDelta' + dDelta) * hSy\n",
+    "        \n",
+    "        # make sure Delta is lower triangular\n",
+    "        Delta = lDelta + dDelta\n",
+    "        active_set = find(Delta)\n",
+    "    end     \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    iter = 1;\n",
+    "    while iter < maxIter    \n",
+    "        if mod(iter, 10) == 0\n",
+    "            @show \"outer $iter\"\n",
+    "        end\n",
+    "    \n",
+    "        old_active_set = copy(active_set)\n",
+    "        updateDelta!(Delta, hSx, hSy, A, lambda; maxInnerIter=maxInnerIter, optTol=optTol)\n",
+    "        findViolator!(active_set, Delta, hSx, hSy)        \n",
+    "        \n",
+    "        if old_active_set == active_set\n",
+    "            break\n",
+    "        end\n",
+    "        \n",
+    "        iter = iter + 1;\n",
+    "        # update A\n",
+    "        lDelta = tril(Delta, -1)\n",
+    "        dDelta = spdiagm(diag(Delta))\n",
+    "        A = hSx * (lDelta + lDelta' + dDelta) * hSy      \n",
+    "        \n",
+    "    end\n",
+    "    Delta\n",
+    "en"
+   ]
   }
  ],
  "metadata": {
