Change to a simple example

--- a/Simple Example.ipynb
+++ b/Simple Example.ipynb
@@ -50,24 +50,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "p = 100\n",
+    "p = 200\n",
     "Sigmax = eye(p,p)\n",
-    "Sigmay = eye(p,p)\n",
+    "Sigmay = zeros(p,p)\n",
     "rho = 0.7\n",
-    "tS = 5\n",
-    "A = zeros(tS, tS)\n",
-    "for i=1:tS\n",
-    "    for j=1:tS\n",
-    "        A[i,j]=rho^abs(i-j)\n",
+    "for i=1:p\n",
+    "    for j=1:p\n",
+    "        Sigmay[i,j]=rho^abs(i-j)\n",
     "    end\n",
     "end\n",
-    "Sigmay[1:tS,1:tS] = A\n",
     "\n",
     "sqmy = sqrtm(Sigmay)\n",
     "\n",
@@ -81,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 101,
    "metadata": {
     "collapsed": false
    },
@@ -90,14 +87,14 @@
      "data": {
       "text/plain": [
        "5x5 Array{Float64,2}:\n",
-       " -0.960784      1.37255      -8.59879e-17  -1.6218e-16    1.85037e-16\n",
-       "  1.37255      -1.92157       1.37255       2.28575e-16  -3.26536e-16\n",
-       " -1.11022e-16   1.37255      -1.92157       1.37255       2.17691e-16\n",
+       " -0.960784      1.37255      -8.59879e-17  -1.6218e-16    2.76467e-16\n",
+       "  1.37255      -1.92157       1.37255       2.28575e-16  -6.00827e-16\n",
+       " -1.11022e-16   1.37255      -1.92157       1.37255       4.76743e-16\n",
        " -1.88738e-16   1.11022e-16   1.37255      -1.92157       1.37255    \n",
-       "  1.55431e-16  -2.9976e-16    1.11022e-16   1.37255      -0.960784   "
+       "  4.996e-16    -6.32827e-16   1.11022e-16   1.37255      -1.92157    "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -353,48 +350,48 @@
       "\"outer $(iter)\" => \"outer 10\"\n",
       "\"outer $(iter)\" => \"outer 20\"\n",
       "\"outer $(iter)\" => \"outer 30\"\n",
-      "elapsed time: 10.32453495 seconds (283120 bytes allocated)\n"
+      "elapsed time: 249.31510672 seconds (1003120 bytes allocated)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "100x100 Array{Float64,2}:\n",
-       " 0.0        0.363742   0.0       …  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.363742  -0.235062   0.323915     0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.323915  -0.16835      0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.0        0.353804     0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.0        0.0          0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.0        0.0       …  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.0        0.0          0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.0        0.0          0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.0        0.0          0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.0        0.0          0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.0        0.0       …  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.0        0.0          0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.0        0.0          0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " ⋮                               ⋱            ⋮                      \n",
-       " 0.0        0.0        0.0          0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.0        0.0          0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.0        0.0       …  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.0        0.0          0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.0        0.0          0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.0        0.0          0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.0        0.0          0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.0        0.0       …  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.0        0.0          0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.0        0.0          0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.0        0.0          0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0        0.0        0.0          0.0  0.0  0.0  0.0  0.0  0.0  0.0"
+       "200x200 Array{Float64,2}:\n",
+       " -0.16258    0.582703   0.0       …   0.0          0.0        0.0       \n",
+       "  0.582703  -0.63669    0.72368       0.0          0.0        0.0       \n",
+       "  0.0        0.72368   -0.971444      0.0          0.0        0.0       \n",
+       "  0.0        0.0        0.763628      0.0          0.0        0.0       \n",
+       "  0.0        0.0        0.0           0.0          0.0        0.0       \n",
+       "  0.0        0.0        0.0       …   0.0          0.0        0.0       \n",
+       "  0.0        0.0        0.0           0.0          0.0        0.0       \n",
+       "  0.0        0.0        0.0           0.0          0.0        0.0       \n",
+       "  0.0        0.0        0.0           0.0          0.0        0.0       \n",
+       "  0.0        0.0        0.0           0.0          0.0        0.0       \n",
+       "  0.0        0.0        0.0       …   0.0          0.0        0.0       \n",
+       "  0.0        0.0        0.0           0.0          0.0        0.0       \n",
+       "  0.0        0.0        0.0           0.0          0.0        0.0       \n",
+       "  ⋮                               ⋱                                     \n",
+       "  0.0        0.0        0.0           0.0          0.0        0.0       \n",
+       "  0.0        0.0        0.0           0.0          0.0        0.0       \n",
+       "  0.0        0.0        0.0       …   0.0          0.0        0.0       \n",
+       "  0.0        0.0        0.0           0.0          0.0        0.0       \n",
+       "  0.0        0.0        0.0           0.0          0.0        0.0       \n",
+       "  0.0        0.0        0.0           0.0          0.0        0.0       \n",
+       "  0.0        0.0        0.0           0.0          0.0        0.0       \n",
+       "  0.0        0.0        0.0       …   0.0          0.0        0.0       \n",
+       "  0.0        0.0        0.0           0.80239      0.0        0.0       \n",
+       "  0.0        0.0        0.0          -0.905627     0.763004   0.00506813\n",
+       "  0.0        0.0        0.0           0.763004    -0.759454   0.545131  \n",
+       "  0.0        0.0        0.0           0.00506813   0.545131  -0.193631  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lambda = 0.3\n",
+    "lambda = 0.2\n",
     "@time solShoot = DiffCovShooting(hSx, hSy, lambda, ones(p,p))"
    ]
   },
@@ -457,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false
    },
@@ -468,7 +465,7 @@
        "DiffCovActiveShooting (generic function with 1 method)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +484,7 @@
     "    \n",
     "    iter = 1\n",
     "    while iter <= maxIter\n",
-    "       if mod(iter, 10) == 0\n",
+    "       if mod(iter, 100) == 0\n",
     "            @show \"inner $iter\"\n",
     "        end\n",
     "        \n",
@@ -595,7 +592,7 @@
     "    \n",
     "    iter = 1;\n",
     "    while iter < maxIter    \n",
-    "        if mod(iter, 10) == 0\n",
+    "        if mod(iter, 100) == 0\n",
     "            @show \"outer $iter\"\n",
     "        end\n",
     "    \n",
@@ -624,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 107,
    "metadata": {
     "collapsed": false
    },
@@ -633,31 +630,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"inner $(iter)\" => \"inner 10\"\n",
-      "\"inner $(iter)\" => \"inner 10\"\n",
-      "\"inner $(iter)\" => \"inner 10\"\n",
-      "\"inner $(iter)\" => \"inner 10\"\n",
-      "\"inner $(iter)\" => \"inner 20\"\n",
-      "\"inner $(iter)\" => \"inner 10\"\n",
-      "\"inner $(iter)\" => \"inner 20\"\n",
-      "elapsed time: 0.007540427 seconds (6728256 bytes allocated)\n"
+      "\"outer $(iter)\" => \"outer 10\"\n",
+      "\"outer $(iter)\" => \"outer 20\"\n",
+      "\"outer $(iter)\" => \"outer 30\"\n",
+      "\"outer $(iter)\" => \"outer 40\"\n",
+      "\"outer $(iter)\" => \"outer 50\"\n",
+      "\"outer $(iter)\" => \"outer 60\"\n",
+      "\"outer $(iter)\" => \"outer 70\"\n",
+      "\"outer $(iter)\" => \"outer 80\"\n",
+      "\"outer $(iter)\" => \"outer 90\"\n",
+      "\"outer $(iter)\" => \"outer 100\"\n",
+      "\"outer $(iter)\" => \"outer 110\"\n",
+      "\"outer $(iter)\" => \"outer 120\"\n",
+      "\"outer $(iter)\" => \"outer 130\"\n",
+      "\"outer $(iter)\" => \"outer 140\"\n",
+      "\"outer $(iter)\" => \"outer 150\"\n",
+      "\"outer $(iter)\" => \"outer 160\"\n",
+      "\"outer $(iter)\" => \"outer 170\"\n",
+      "\"outer $(iter)\" => \"outer 180\"\n",
+      "\"outer $(iter)\" => \"outer 190\"\n",
+      "\"outer $(iter)\" => \"outer 200\"\n",
+      "\"outer $(iter)\" => \"outer 210\"\n",
+      "\"outer $(iter)\" => \"outer 220\"\n",
+      "\"outer $(iter)\" => \"outer 230\"\n",
+      "\"outer $(iter)\" => \"outer 240\"\n",
+      "\"outer $(iter)\" => \"outer 250\"\n",
+      "\"outer $(iter)\" => \"outer 260\"\n",
+      "\"outer $(iter)\" => \"outer 270\"\n",
+      "\"outer $(iter)\" => \"outer 280\"\n",
+      "\"outer $(iter)\" => \"outer 290\"\n",
+      "\"outer $(iter)\" => \"outer 300\"\n",
+      "\"outer $(iter)\" => \"outer 310\"\n",
+      "\"outer $(iter)\" => \"outer 320\"\n",
+      "\"outer $(iter)\" => \"outer 330\"\n",
+      "\"outer $(iter)\" => \"outer 340\"\n",
+      "\"outer $(iter)\" => \"outer 350\"\n",
+      "\"outer $(iter)\" => \"outer 360\"\n",
+      "\"outer $(iter)\" => \"outer 370\"\n",
+      "\"outer $(iter)\" => \"outer 380\"\n",
+      "\"outer $(iter)\" => \"outer 390\"\n",
+      "\"outer $(iter)\" => \"outer 400\"\n",
+      "\"outer $(iter)\" => \"outer 410\"\n",
+      "\"outer $(iter)\" => \"outer 420\"\n",
+      "\"outer $(iter)\" => \"outer 430\"\n",
+      "elapsed time: 18.858832604 seconds (1290835308 bytes allocated, 4.81% gc time)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "100x100 sparse matrix with 8 Float64 entries:\n",
-       "\t[2  ,   1]  =  0.363742\n",
-       "\t[2  ,   2]  =  -0.235062\n",
-       "\t[3  ,   2]  =  0.323915\n",
-       "\t[3  ,   3]  =  -0.16835\n",
-       "\t[4  ,   3]  =  0.353804\n",
-       "\t[4  ,   4]  =  -0.459889\n",
-       "\t[5  ,   4]  =  0.474936\n",
-       "\t[5  ,   5]  =  -0.0387662"
+       "200x200 sparse matrix with 429 Float64 entries:\n",
+       "\t[1  ,   1]  =  -0.16258\n",
+       "\t[2  ,   1]  =  0.582703\n",
+       "\t[2  ,   2]  =  -0.63669\n",
+       "\t[3  ,   2]  =  0.72368\n",
+       "\t[3  ,   3]  =  -0.971444\n",
+       "\t[4  ,   3]  =  0.763628\n",
+       "\t[113,   3]  =  0.0169449\n",
+       "\t[4  ,   4]  =  -1.01247\n",
+       "\t[5  ,   4]  =  0.840508\n",
+       "\t[5  ,   5]  =  -0.809753\n",
+       "\t⋮\n",
+       "\t[196, 195]  =  0.717078\n",
+       "\t[196, 196]  =  -0.827476\n",
+       "\t[197, 196]  =  0.531696\n",
+       "\t[197, 197]  =  -0.70556\n",
+       "\t[198, 197]  =  0.80239\n",
+       "\t[198, 198]  =  -0.905627\n",
+       "\t[199, 198]  =  0.763004\n",
+       "\t[200, 198]  =  0.00506813\n",
+       "\t[199, 199]  =  -0.759454\n",
+       "\t[200, 199]  =  0.545131\n",
+       "\t[200, 200]  =  -0.193631"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
@@ -676,24 +723,16 @@
     {
      "data": {
       "text/plain": [
-       "7x7 Array{Float64,2}:\n",
-       " 0.0        0.0        0.0        0.0        0.0        0.0  0.0\n",
-       " 0.363742  -0.235062   0.0        0.0        0.0        0.0  0.0\n",
-       " 0.0        0.323915  -0.16835    0.0        0.0        0.0  0.0\n",
-       " 0.0        0.0        0.353804  -0.459889   0.0        0.0  0.0\n",
-       " 0.0        0.0        0.0        0.474936  -0.0387662  0.0  0.0\n",
-       " 0.0        0.0        0.0        0.0        0.0        0.0  0.0\n",
-       " 0.0        0.0        0.0        0.0        0.0        0.0  0.0"
+       "1.76200985690933e-7"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "solShootFast = full(solShootFast)\n",
-    "solShootFast[1:7,1:7]"
+    "maximum(abs(tril(solShoot-solShootFast)))"
    ]
   },
   {
